--- a/权限相关数据库设计.md
+++ b/权限相关数据库设计.md
@@ -1,1 +1,64 @@
 
+1、用户表字段(sys_user)
+
+| 字段名称 | 数据类型 | 字段大小 | 是否主键 | 是否为空 | 备注  |
+| --- | --- | --- | --- | --- | --- |
+| user_id | int | 11  | 是   | 否   | 用户id |
+| username | varchar | 64  | 否   | 是   | 登录账户 |
+| password | varchar | 128 | 否   | 是   | 登录密码 |
+| phone | varchar | 13  | 否   | 是   | 用户电话 |
+| email | varchar | 36  | 否   | 是   | 邮箱  |
+| sex | varchar | 2   | 否   | 是   | 0:男 1：女 |
+| is_admin | tinyint | 2   | 否   | 是   | 是否为超级管理员 1：是 0：否 |
+| is_account_non_expired | tinyint | 2   | 否   | 是   | 帐户是否过期(1 未过期，0已过期) |
+| is_account_non_locked | tinyint | 2   | 否   | 是   | 帐户是否被锁定(1 未锁定，0已锁定) |
+| is_credentials_non_expired | tinyint | 2   | 否   | 是   | 密码是否过期(1 未过期，0已过期) |
+| is_enabled | tinyint | 2   | 否   | 是   | 帐户是否可用(1 可用，0 删除用户) |
+| nick_name | varchar | 36  | 否   | 是   | 姓名  |
+| create_time | datetime |     | 否   | 是   | 创建时间 |
+| update_time | datetime |     | 否   | 是   | 更新时间 |
+
+##### 2、用户角色表(sys_user_role)
+
+| 字段名称 | 数据类型 | 字段大小 | 是否主键 | 是否为空 | 备注  |
+| --- | --- | --- | --- | --- | --- |
+| user_role_id | int | 11  | 是   | 否   | 主键  |
+| user_id | int | 11  | 否   | 否   | 用户id |
+| role_id | int | 11  | 否   | 否   | 角色id |
+
+##### 3、角色表字段(sys_role)
+
+| 字段名称 | 数据类型 | 字段大小 | 是否主键 | 是否为空 | 备注  |
+| --- | --- | --- | --- | --- | --- |
+| role_id | int | 11  | 是   | 否   | 角色id |
+| role_name | varchar | 64  | 否   | 是   | 角色名称 |
+| role_type | varchar | 2   | 否   | 是   | 角色类型 1：系统用户 2：学生 3：教师 |
+| remark | varchar | 128 | 否   | 是   | 备注  |
+| create_time | datetime |     | 否   | 是   | 创建时间 |
+| update_time | datetime |     | 否   | 是   | 更新时间 |
+
+##### 4、角色菜单表(sys_role_menu)
+
+| 字段名称 | 数据类型 | 字段大小 | 是否主键 | 是否为空 | 备注  |
+| --- | --- | --- | --- | --- | --- |
+| role_menu_id | int | 11  | 是   | 否   | 主键  |
+| menu_id | int | 11  | 否   | 否   | 菜单id |
+| role_id | int | 11  | 否   | 否   | 角色id |
+
+##### 5、菜单表字段(sys_menu)
+
+| 字段名称 | 数据类型 | 字段大小 | 是否主键 | 是否为空 | 备注  |
+| --- | --- | --- | --- | --- | --- |
+| menu_id | int | 11  | 是   | 否   | 菜单id |
+| parent_id | int | 11  | 否   | 是   | 父级菜单id |
+| title | varchar | 64  | 否   | 是   | 菜单名称 |
+| code | varchar | 64  | 否   | 是   | 权限字段 |
+| name | varchar | 36  | 否   | 是   | 路由name |
+| path | varchar | 36  | 否   | 是   | 路由path |
+| url | varchar | 128 | 否   | 是   | 组件路径 |
+| type | varchar | 2   | 否   | 是   | 类型(0 目录 1菜单，2按钮) |
+| icon | varchar | 36  | 否   | 是   | 菜单图标 |
+| parent_name | varchar | 64  | 否   | 是   | 上级菜单名称 |
+| order_num | int | 11  | 否   | 是   | 序号  |
+| create_time | datetime |     | 否   | 是   | 创建时间 |
+| update_time | datetime |     | 否   | 是   | 更新时间 |
